Solved color changing error

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 id="one">First Player <br> ( O )</h1>
           </th>
           <th>
-              <h1 class="text">Tic Tac Toe</h1>
+              <h1 class="text"><u>Tic Tac Toe</u></h1>
               <button id="reset">Reset</button>
               <h1 id="win">Let's Play....</h1>
               <div class="gameboard">
